2009-03-02 Riccardo Mottola <rmottola@users.sf.net>

	* Framework/PCProject.m,
	* Framework/PCProjectBuilder.m,
	* Framework/PCProjectManager.m,
	* Framework/PCFileCreator.m,
	* Framework/PCEditorManager.m: Fix string constants

2009-03-01 03:10  Sergii Stoian <stoyan255@gmail.com>

	* Modules/Preferences/Interface/PCInterfacePrefs.h:
	* Modules/Preferences/Interface/Resources/InterfacePrefs.gorm:
	* Modules/Preferences/Interface/PCInterfacePrefs.m:
	Move options "Remember windows and panels opened in project" and
	"Display Log Panel at startup" from here...
	* Modules/Preferences/Misc/PCMiscPrefs.h:
	* Modules/Preferences/Misc/PCMiscPrefs.m:
	* Modules/Preferences/Misc/Resources/MiscPrefs.gorm:
	to here.

2009-03-01 00:47  Sergii Stoian <stoyan255@gmail.com>

	* Modules/Preferences/Build/PCBuildPrefs.h:
	* Modules/Preferences/Build/PCBuildPrefs.m:
	* Modules/Preferences/Build/Resources/BuildPrefs.gorm:
	Move "Remove files in root build directory on quit" option
	from here...
	* Modules/Preferences/Misc/PCMiscPrefs.h:
	* Modules/Preferences/Misc/PCMiscPrefs.m:
	* Modules/Preferences/Misc/Resources/MiscPrefs.gorm:
	to here.

2009-03-01  Sergii Stoian <stoyan255@gmail.com>

	* Framework/PCProjectManager.m:
	* Framework/PCProjectLoadedFiles.m:
	* Framework/PCMakefileFactory.m:
	* Framework/PCProject.m:
	* Framework/PCFileManager.m:
	* Framework/PCProjectBrowser.m:
	* Framework/PCButton.m:
	* Framework/PCProjectBuilder.m:
	* Framework/PCEditorManager.m:
	* Framework/PCLogController.m:
	* Framework/PCProjectLauncher.m:
	* Framework/PCProjectWindow.m:
	* PCAppController.m:
	* Modules/Preferences/Build/PCBuildPrefs.m:
	* Modules/Preferences/Interface/PCInterfacePrefs.m:
	* Headers/Protocols/Preferences.h:
	* Headers/ProjectCenter/PCProject.h:
	* Headers/ProjectCenter/PCProjectBrowser.h:
	* Headers/ProjectCenter/PCProjectBuilder.h:
	* Headers/ProjectCenter/PCEditorManager.h:
	* Headers/PCPrefController.h:
	* PCPrefController.m: Use new preferences system instead of